crates/analyzer/tests/snapshots/errors__ctx_missing_internal_call.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"

---
error: `bar` expects 1 argument, but 0 were provided
   ┌─ compile_errors/ctx_missing_internal_call.fe:6:12
   │
 6 │     pub fn bar(ctx: Context) -> u256 {
   │            ^^^ expects 1 argument
   ·
11 │         self.favorite_number = bar()
   │                                   -- supplied 0 arguments

error: cannot modify `self`, as it is not mutable
   ┌─ compile_errors/ctx_missing_internal_call.fe:10:9
   │
 9 │     pub fn baz(self, ctx: Context):
   │                ---- consider changing this to be mutable: `mut self`
10 │         self.favorite_number = bar()
   │         ^^^^ not mutable


